--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@carbon/icons-react": "^11.36.0",
     "@carbon/react": "^1.51.1",
+    "@react-querybuilder/dnd": "^7.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,9 +13,10 @@
     "dagre": "^0.8.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dnd": "10.0.2",
+    "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-querybuilder": "^7.2.0",
     "react-resizable-panels": "^2.0.17",
     "react-scripts": "5.0.1",
     "reactflow": "11.10.4",
