Added route for activity definition and double click funtionality in activity flow designer

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "react-router-dom": "^6.23.0"
   }
 }
