--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-querybuilder": "^7.2.0",
     "react-resizable-panels": "^2.0.17",
     "react-scripts": "5.0.1",
