--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@carbon/icons-react": "^11.36.0",
     "@carbon/react": "^1.51.1",
+    "@data-driven-forms/carbon-component-mapper": "^3.22.4",
+    "@data-driven-forms/react-form-renderer": "^3.22.4",
     "@react-querybuilder/dnd": "^7.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "carbon-components-react": "^8.56.0",
     "classnames": "^2.5.1",
     "dagre": "^0.8.5",
     "lodash": "^4.17.21",
