--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "reactflow": "11.10.4",
     "sass": "^1.71.1",
     "shortid": "^2.2.16",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
